--- a/frontEnd/html/login.html
+++ b/frontEnd/html/login.html
@@ -12,7 +12,6 @@
             <h1>Job Board</h1>
         </header>
 
-        <body>
             <form>
                 <label>Email</label>
                 <input type="email" id="email">
@@ -20,9 +19,10 @@
                 <input type="password" id="password">
                 <button type="submit">Submit</button>
             </form>
+            <a href="/register.html">Je n'ai pas encore de compte</a>
 
             <script src="../js/login.js"></script>
-        </body>
+
 
         <footer>
             <p>&copy; Pré-MSC REN-1</p>
