--- a/frontEnd/html/candidate.html
+++ b/frontEnd/html/candidate.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../css/candidate.css" rel="stylesheet">
-        <title>Candidate</title>
-    </head>
 
-    <body>
-        <header>
-            <h1>Job Board</h1>
-        </header>
-        
-        <div class="ads-container">
-            <!-- Card Template -->
-            <div class="ads-card" style="display: none;">
-                <h1 class="ads-title"></h1>
-                <p class="ads-short-description"></p>
-                <button class="learn-more">Learn More</button>
-                <button class="apply">Apply</button>
-            </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/candidate.css" rel="stylesheet">
+    <title>Candidate</title>
+</head>
+
+<body>
+
+    <header>
+        <h1>Job Board</h1>
+    </header>
+
+    <div class="ads-container">
+        <!-- Card Template -->
+        <div class="ads-card" style="display: none;">
+            <h1 class="ads-title"></h1>
+            <p><b>Company:</b> <span class="company-name"></span></p>
+            <p class="ads-short-description"></p>
+            <button class="learn-more">Learn More</button>
+            <button class="apply">Apply</button>
         </div>
 
         <!-- Modal Template -->
         <div class="modal-card" style="display: none;">
             <button class="modal-close">X</button>
             <h1 class="modal-title"></h1>
+            <p><b>Company:</b> <span class="modal-company-name"></span></p>
             <p class="modal-long-description"></p>
             <p><b>Wages:</b> <span class="modal-wages"></span></p>
             <p><b>Working time:</b> <span class="modal-working-time"></span></p>
             <p><b>Place:</b> <span class="modal-place"></span></p>
             <button class="apply">Apply</button>
         </div>
+        <!-- Form Template -->
+        <div class="form-card" style="display: none;">
+            <form>
+                <input id="form-id-user" type="hidden">
+                <input id="form-id-ads" type="hidden">
+                <label for="name">Name</label>
+                <input type="text" id="form-name" name="name" required><br>
+                <label for="email">email</label>
+                <input type="email" id="form-email"><br>
+                <label for="phone">Phone</label>
+                <input type="tel" id="form-phone" name="phone"><br>
+                <textarea id="Message" rows="4" cols="50" placeholder="enter your message here"></textarea><br>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+
+
 
         <footer>
             <p>&copy; Pré-MSC REN-1</p>
         </footer>
 
         <script src="../js/candidate.js"></script>
-    </body>
+</body>
+
 </html>
