--- a/frontEnd/html/login.html
+++ b/frontEnd/html/login.html
@@ -19,7 +19,7 @@
                 <input type="password" id="password">
                 <button type="submit">Submit</button>
             </form>
-            <a href="/register.html">Je n'ai pas encore de compte</a>
+            <a href="/html/register.html">I don't have an account yet</a>
 
             <script src="../js/login.js"></script>
 
