--- a/frontEnd/html/register.html
+++ b/frontEnd/html/register.html
@@ -35,7 +35,7 @@
                 </div>
                 
                 <label for="phone">Phone</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone" maxlength="10">
                 
                 <button type="submit">Submit</button>
             </form>
